hphp/hack/test/typecheck/reactive/mutability_flavors1.php
<?hh // partial

class A {}

<<__Rx>>
function f(): void {
  $a = \HH\Rx\mutable(new A());
  // ERROR
  $a = new A();
}
